# flask_project_demo

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: markdown.md
flask_project_demo/: __init__.py  cli.py  config.py  db.py  plugins.py  typing.py  views.py
flask_project_demo/api/: __init__.py  auth.py  users.py
flask_project_demo/models/: __init__.py  user.py
flask_project_demo/templates/: _navbar.html  base.html  index.html  login.html  signin.html
scripts/: runner.py
tests/: conftest.py  test_auth_api.py  test_db.py  test_user_api.py
